<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_undo">Undo</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_reminders">No reminders yet</string>
    <string name="title_activity_reminder_edit">Task Reminder Edit</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="date">Reminder date</string>
    <string name="time">Reminder time</string>
    <string name="confirm">Save</string>
    <string name="menu_insert">Add reminder</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete">Delete reminder</string>
    <string name="task_saved_message">Saving task</string>
    <string name="notify_new_task_message">New reminder</string>
    <string name="notifiy_new_task_title">New task title</string>
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>
    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time for now (in minutes) that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>

</resources>
