<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"    
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@android:color/black"
    	android:drawableBottom="@android:color/black"
    	android:drawableLeft="@android:color/black"
    	android:drawableRight="@android:color/black"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body"/>

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:gravity="top"
        android:inputType="text"
        android:minLines="5"
        android:scrollbars="vertical" />
    
    <TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/date" />
    
    <Button
		android:id="@+id/reminder_date"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"/>
    
    <TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/time" />
    
    <Button 
        android:id="@+id/reminder_time"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
    
    <Button android:id="@+id/confirm"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/confirm"/>
        
</LinearLayout>
</ScrollView>